// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControl renders StringControl unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 kysoaZ"
  >
    <div
      class="sc-233fee17-0 bfoGJf"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value="derp"
      />
      <label
        class="sc-840480c4-0 jepABy"
      >
        String test
      </label>
      <div
        class="sc-662bd339-0 vAsRK sc-991d2e2e-0 OfZNn"
        color="night"
      >
        lock
      </div>
    </div>
    <div
      class="sc-955ed11e-0 griBRj"
    />
  </div>
</div>
`;

exports[`StringControl renders StringControl:Phone unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 bVdSQY"
  >
    <div
      class="sc-233fee17-0 bfoGJf"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value=""
      />
      <label
        class="sc-840480c4-0 jepABy"
      >
        String test
      </label>
      <div
        class="sc-662bd339-0 vAsRK sc-991d2e2e-0 OfZNn"
        color="night"
      >
        lock
      </div>
    </div>
    <div
      class="sc-955ed11e-0 griBRj"
    />
  </div>
</div>
`;
